# vulkan_by_example

./: CMakeLists.txt  LICENSE  README.md
src/teapot/: CMakeLists.txt
src/teapot/resources/: TesselationEvaluationShader.tese
src/teapot/src/: MainApplication.cpp  MainApplication.h  main.cpp
src/teapot/src/app/: App.h  AppData.h  allocate_command_buffers.cpp  allocate_descriptor_set.cpp  allocate_synchronization_buffer.cpp  clear.cpp  create_command_buffer_fences.cpp  create_command_pools.cpp  create_debug_utils_messenger.cpp  create_depth_buffer.cpp  create_descriptor_pool.cpp  create_descriptor_set_layout.cpp  create_frame_buffers.cpp  create_index_buffer.cpp  create_instance.cpp  create_logical_device.cpp  create_matrices_buffer.cpp  create_patches_buffer.cpp  create_pipeline_layout.cpp  create_pipelines.cpp  create_positions_buffer.cpp  create_render_pass.cpp  create_semaphores.cpp  create_shader_modules.cpp  create_static_buffer.cpp  create_surface.cpp  create_swap_chain.cpp  create_window.cpp  destroy_frame_buffers.cpp  framebuffer_size_callback.cpp  get_device_qeues.cpp  get_physical_device.cpp  get_required_window_extensions.cpp  get_surface_capabilities.cpp  get_surface_extent.cpp  get_update_model_matrix_command_buffer.cpp  get_update_project_matrix_command_buffer.cpp  get_update_view_matrix_command_buffer.cpp  on_key_press.cpp  prepare_device_features.cpp  (+8 more)
src/teapot/src/app/helpers/: VkObjectsHelpers.cpp  VkObjectsHelpers.h  VkRaii.h  VkStructsHelpers.cpp  VkStructsHelpers.h
src/tesselated_teapot/: CMakeLists.txt
src/tesselated_teapot/src/: Main.cpp  MainApplication.cpp  MainApplication.h
src/tesselated_teapot/src/app/: App.h  AppData.h  allocate_command_buffers.cpp  allocate_descriptor_sets.cpp  clear.cpp  create_command_pools.cpp  create_debug_report_callback.cpp  create_descriptor_pool.cpp  create_fences.cpp  create_frame_buffers.cpp  create_index_buffer.cpp  create_instance.cpp  create_logical_device.cpp  create_matrices_buffer.cpp  create_patches_buffer.cpp  create_positions_buffer.cpp  create_present_semaphores.cpp  create_render_pass.cpp  create_shader_modules.cpp  create_surface.cpp  create_swap_chain.h  create_window.cpp  get_device_qeues.cpp  record_rendering_command_buffers.cpp  update_descriptor_set.cpp  update_model_matrix.cpp  update_projection_matrix.cpp  update_view_matrix.cpp
src/tesselated_teapot/src/details/: Details.h  calculate_total_buffers_size.cpp  check_device_suitability.cpp  check_required_device_extensions.cpp  create_frame_buffers.cpp  create_image_views.cpp  get_command_buffer_with_barrier.cpp  get_device_graphics_and_present_queue_families.cpp  get_device_surface_format.cpp  get_device_surface_present_mode.cpp  get_surface_extent.cpp  get_swap_chain_images.cpp
src/tesselated_teapot/src/details/device_local_buffer/: allocate_command_buffer.cpp  bind_device_local_buffer_and_memory.cpp  bind_staging_buffer_and_memory.cpp  copy_buffer.cpp  copy_data_to_staging_buffer.cpp  create_copy_command_pool.cpp  create_device_local_buffer.cpp  create_device_local_buffer_with_data.cpp  create_device_local_buffer_with_data.h  create_device_local_device_memory.cpp  create_staging_buffer.cpp  create_staging_device_memory.cpp  find_device_local_buffer_memory_type.cpp  find_staging_buffer_memory_type.cpp
src/tesselated_teapot/src/details/vk_raii/: VkRaii.h
src/tesselated_teapot/src/vk_helpers/: VkObjectsHelper.cpp  VkObjectsHelper.h  VkStructHelpers.cpp  VkStructHelpers.h
